Apply 1.4.0 review fixes and new appeal features to public beta.
Review fixes from the main 1.4.0 repo:
- Remove unused wildernessRevertEnabled field from ProtectionManager
- Migrate DiscordWebhook URL construction to URI.create().toURL()
- Wrap TeleportUtil fallback scheduler in try/catch
- Change WildernessRevertTask and PlotVisualizerTask from BukkitRunnable to Runnable
- Exclude META-INF/MANIFEST.MF and module-info.class from shaded JAR

New appeal features:
- Optional ProtocolLib soft dependency for packet-based claim border visualization
- Lightweight read-only web admin dashboard foundation (disabled by default, token-gated)
- Discord account linking foundation (UUID <-> Discord ID storage)
- Official API example add-on under examples/api-addon/

Also preserves the existing public beta work already present in the working tree.

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>